--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@
 build/
 /captures
 .externalNativeBuild
+
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+org.eclipse.buildship.core.prefs
+.project
+.classpath
