--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,12 @@
 buildscript {
 
     ext {
-        kotlinVersion = '1.3.50'
+        kotlinVersion = '1.3.61'
         appCompatVersion = "1.1.0"
-        recyclerVersion = "1.1.0-rc01"
-        materialVersion = "1.1.0-beta01"
+        recyclerVersion = "1.1.0"
+        materialVersion = "1.2.0-alpha03"
         navigationVersion = "2.1.0"
-        constraintLayoutVersion = "2.0.0-beta3"
+        constraintLayoutVersion = "2.0.0-beta4"
     }
 
     repositories {
@@ -32,7 +32,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
